--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "babel src -d dist",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,5 +13,10 @@
   "dependencies": {
     "express": "^4.21.2",
     "sharp": "^0.33.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/cli": "^7.21.0",
+    "@babel/preset-env": "^7.21.0"
   }
 }
