--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.2",
+    "jimp": "^1.6.0",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.0",
     "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.21.0"
   }
 }
